<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/menu_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/dlg_select_manual"
        android:textColor="#6699FF"
        android:textSize="20sp" />

     <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/text_grayline" />
     
    <TextView
        android:id="@+id/menu_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/dlg_select_scan"
        android:textColor="#6699FF"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/text_grayline" />

    <TextView
        android:id="@+id/menu_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/dlg_select_cancel"
        android:textColor="#000000"
        android:textSize="24sp" />

</LinearLayout>