<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9e1ee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        <EditText
            android:id="@+id/user_verify_code_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/verify_code"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="left|center_vertical"
        android:text="@string/authentication_tip"
        android:textColor="#00a4b5"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/activie_account"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="17.5dp"
            android:background="@drawable/button_shape_style_pnp_1"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/reset_code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="17.5dp"
            android:background="@drawable/button_shape_style_red"
            android:text="@string/reset_code"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>