<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="17.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        <EditText
            android:id="@+id/user_account_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/account_hit"
            android:inputType="textEmailAddress"
            android:maxLength="128"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="17.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        <EditText
            android:id="@+id/user_pwd_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/pwd_hit"
            android:inputType="textPassword"
            android:maxLength="64"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/login_ok"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="17.5dp"
        android:background="@drawable/button_shape_style_pnp_1"
        android:gravity="center"
        android:text="@string/user_login_ok"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/create_account_txt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="17.5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/button_shape_style_pnp_1"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forget_pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/forget_pwd"
        android:textColor="@color/white" >
    </TextView>

</LinearLayout>