<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9e1ee"
    android:orientation="vertical" >

    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"      
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp" >
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/get_verify_code"
            android:textColor="#00a4b5"
            
            android:gravity="left|center_vertical" />         
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        
        <EditText
            android:id="@+id/user_verify_code_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/verify_code"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"      
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp" >
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/input_new_password"
            android:textColor="#00a4b5"
            
            android:gravity="left" />         
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        <EditText
            android:id="@+id/pwd_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:maxLength="64"
            android:hint="@string/pnp_tip_15"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="17.5dp" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="#00a4b5" />

        <EditText
            android:id="@+id/pwd_confirm_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-2dip"
            android:layout_marginStart="-2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:maxLength="64"
            android:hint="@string/pnp_tip_16"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="start|center_horizontal" >
"

        <Button
            android:textColor="@color/white"
            android:id="@+id/activie_account"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="17.5dp"
            android:background="@drawable/button_shape_style_pnp_1"
            android:text="@string/ok" />
        
        <Button
            android:textColor="@color/white"
            android:id="@+id/reset_code"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape_style_red"
            android:text="@string/reset_code" />
        
    </LinearLayout>

</LinearLayout>