<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9e1ee"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/choose_wifi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tecom_odp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#231815" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tecom_odp_disconnected"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#5e5e5e"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_signal" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_bg_color"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connect_odp_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/connect_to_odp_1"
        android:textColor="#00a4b5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/choose_wifi_manual"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape_style_pnp_1"
        android:gravity="center"
        android:text="@string/nortek_choose_wifi"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connect_odp_2" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/connect_to_odp_2"
        android:textColor="#00a4b5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape_style_pnp_2"
        android:clickable="false"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/pnp_tip_17"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

</LinearLayout>