<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9e1ee"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00a4b5"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/aliceblue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/nortek_account"
            android:textColor="@color/aliceblue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/aliceblue" />
    </LinearLayout>

    <ListView
        android:id="@+id/account_list"
        android:layout_width="match_parent"
        android:divider="#00a4b5"
        android:dividerHeight="1dp"
        android:layout_height="320dp" >
    </ListView>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"        
        android:orientation="vertical" 
        android:layout_marginRight="35dp"
        android:gravity="center_horizontal|bottom|right">

        <ImageView
            android:id="@+id/account_add"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:src="@drawable/add_new_door_phone" />
        
    </LinearLayout>
    
</LinearLayout>